make mage sheet support front rules

--- a/ZXcList0.tex
+++ b/ZXcList0.tex
@@ -135,12 +135,182 @@
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Ashen Mask} 
+\cardborder{} 
+\cardcontent{After any player activates their ability, if the intensity is 5 or higher, that player deals 3 damage. Otherwise, that player gains 1 charge.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Iron Scale} 
+\cardborder{} 
+\cardcontent{At the start of the game, set this next to a supply pile. If the intensity is 5 or higher, any ally draws a card. When a player gains a card from this supply pile, adjust the intensity by up to 2. } 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Withering Hourglass} 
+\cardborder{} 
+\cardcontent{At the start of the game, set this next to the least expensive supply pile. When a player gains a card from that supply, any ally gains an \Money token. Then, that player deals 3 damage for each empty supply pile. When that supply pile is emptied, move this treasure to the least expensive supply pile.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Thornblade} 
+\cardborder{} 
+\cardcontent{At the start of your turn, if the intensity is 5 or higher, you may destroy a card in hand.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Skybell} 
+\cardborder{} 
+\cardcontent{When you gain a card, if the intensity is 5 or higher, deal 3 damage and reduce the intensity by 1.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Hollowed Star} 
+\cardborder{} 
+\cardcontent{When you destroy a card, deal damage equal to its cost. Once per turn during your main phase, you may lose 1 charge to destroy a card in your hand.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Adorned Loom} 
+\cardborder{} 
+\cardcontent{When you defeat a minion from the nemesis deck, adjust the intensity by up to 2. \newline After you activate your ability, you may deal damage equal to the intensity. If you do, suffer 2 damage.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Gilded Gauntlets} 
+\cardborder{} 
+\cardcontent{At the start of your turn, if your hand contains more cards that cost 1 or more \Money than 0 \Money, deal 3 damage.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{} 
+\cardimage{Treasure} 
+\cardtitle{Glittering Monocle} 
+\cardborder{} 
+\cardcontent{When you play the second gem that costs 1 \Money or more during your turn, place the next card you gain this turn on top of your deck. When you play the third gem that costs 1 \Money or more during your turn, place the next card you gain this turn into any player's hand instead.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
 \cardbackground{Treasured gem} 
 \cardimage{Treasure} 
 \cardtitle{Triplite Core} 
 \cardborder{} 
 \cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
 \cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Triplite Core} 
+\cardborder{} 
+\cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Triplite Core} 
+\cardborder{} 
+\cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Triplite Core} 
+\cardborder{} 
+\cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Triplite Core} 
+\cardborder{} 
+\cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Shining Fluorite} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. \newline Place the next spell you gain this turn into your hand.} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Shining Fluorite} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. \newline Place the next spell you gain this turn into your hand.} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Shining Fluorite} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. \newline Place the next spell you gain this turn into your hand.} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Shining Fluorite} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money{}. \newline Place the next spell you gain this turn into your hand.} 
+\cardprice{4} 
 \sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
@@ -167,10 +337,150 @@
 \begin{tikzpicture} 
 \cardbackground{Treasured relic} 
 \cardimage{Treasure} 
+\cardtitle{Manifold Container} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline When you gain a card this turn, you may also gain a card that costs less than the gained card.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Manifold Container} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline When you gain a card this turn, you may also gain a card that costs less than the gained card.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Manifold Container} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline When you gain a card this turn, you may also gain a card that costs less than the gained card.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Manifold Container} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline When you gain a card this turn, you may also gain a card that costs less than the gained card.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
 \cardtitle{Blast Sphere} 
 \cardborder{} 
 \cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
 \cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Blast Sphere} 
+\cardborder{} 
+\cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Blast Sphere} 
+\cardborder{} 
+\cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Blast Sphere} 
+\cardborder{} 
+\cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Blast Sphere} 
+\cardborder{} 
+\cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
+\cardborder{} 
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
 \sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
@@ -197,10 +507,190 @@
 \begin{tikzpicture} 
 \cardbackground{Treasured spell} 
 \cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
 \cardtitle{Tethered Darts} 
 \cardborder{} 
 \cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
 \cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
+\cardborder{} 
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
 \sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
